--- a/homework/Day001_HW.ipynb
+++ b/homework/Day001_HW.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
     "try:\n",
     "    with open(\"./Data/Homework.txt\", \"r\") as fh:\n",
     "        f = fh.read()\n",
-    "        if len(data) == len('Hello World'):\n",
+    "        if len(f) == len('Hello World'):\n",
     "            print('check pass!')\n",
     "except EnvironmentError as e: # parent of IOError, OSError *and* WindowsError where available\n",
     "    print('發生錯誤！', e)    \n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
